# world-cup-sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  LICENSE  Launch TUI.bat  Open Dashboard.bat  Open Tracker.bat  Open Web UI.bat  PLAN.md  Quick Odds.bat  README.md  ROADMAP.md  Refresh Data.bat  Simulate Tournament.bat  _risky.json  _value_bets.json  _value_bets_today.json  pyproject.toml  tracker.html
.github/workflows/: ci.yml
data/: fixtures_2026.json  group_g_update.md  lineups_2026.json  odds_2026.json  results_2026.json  sofascore_2026.json  teams_2026.baseline.json  teams_2026.json  third_place_allocation_2026.json  tournament_2026.json  user_bets_2026.json
data/calibration/: latest.md
data/historical/: curated_wc.json
scripts/: add_clubs.py  add_full_squads.py  add_injuries.py  add_intangibles.py  build_fixtures.py  curate_historical.py  generate_fm_attributes.py  regenerate_fixtures_2026.py  tune_model.py  update_odds.py  update_results.py  update_sofascore.py  value_bets_today.py
src/worldcup/: __init__.py  betting.py  calibrate.py  cli.py  data_loader.py  fm_rating.py  games.py  html.py  lineup_store.py  models.py  odds_store.py  polymarket.py  report.py  sofascore.py  sofascore_store.py  tracker.py  tui.py  webapp.py
src/worldcup/engine/: __init__.py  live.py  match.py  poisson.py
src/worldcup/factors/: __init__.py  base.py  builtin.py  heat.py
src/worldcup/tournament/: __init__.py  group_stage.py  knockout.py  simulator.py
tests/: conftest.py  test_betting.py  test_calibrate.py  test_chemistry.py  test_dashboard.py  test_dc_adjust.py  test_engine.py  test_factors.py  test_fatigue.py  test_fm_rating.py  test_heat.py  test_intangibles.py  test_live.py  test_sofascore.py  test_tournament.py  test_tracker.py  test_tracker_pricing.py  test_tracker_report.py  test_webapp.py
