[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-sim"
version = "0.1.0"
description = "Modular Monte Carlo simulator for the 2026 FIFA World Cup with lineup-aware team strength and pluggable match factors."
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
worldcup = "worldcup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
worldcup = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
